// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render correctly: Correct props 1`] = `
<View
  style={
    Object {
      "backgroundColor": "grey",
      "height": 20,
      "marginHorizontal": 20,
      "marginVertical": 10,
    }
  }
/>
`;

exports[`Render correctly: No props 1`] = `
<View
  style={
    Object {
      "backgroundColor": "grey",
      "height": 1,
      "marginHorizontal": 20,
      "marginVertical": 10,
    }
  }
/>
`;

exports[`Render correctly: Size invalid 1`] = `
<View
  style={
    Object {
      "backgroundColor": "grey",
      "height": 1,
      "marginHorizontal": 20,
      "marginVertical": 10,
    }
  }
/>
`;

exports[`Render correctly: Size invalid 2`] = `
<View
  style={
    Object {
      "backgroundColor": "grey",
      "height": 1,
      "marginHorizontal": 20,
      "marginVertical": 10,
    }
  }
/>
`;

exports[`Render correctly: Size null 1`] = `
<View
  style={
    Object {
      "backgroundColor": "grey",
      "height": 1,
      "marginHorizontal": 20,
      "marginVertical": 10,
    }
  }
/>
`;
